// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LocalizedLink renders correct props 1`] = `
<div>
  <a
    aria-label="test"
    class="my-class"
    href="/my-url"
    hreflang="en"
  />
</div>
`;

exports[`LocalizedLink renders correctly for language {
  name: 'Українська',
  code: 'uk',
  path: '/uk',
  dateFormat: 'DD.MM.YYYY'
} 1`] = `
<div>
  <a
    href="/uk/my-url"
    hreflang="uk"
  />
</div>
`;

exports[`LocalizedLink renders correctly for language { name: 'English', code: 'en', path: '', dateFormat: 'DD/MM/YYYY' } 1`] = `
<div>
  <a
    href="/my-url"
    hreflang="en"
  />
</div>
`;

exports[`LocalizedLink renders correctly for language { name: 'Русский', code: 'ru', path: '/ru', dateFormat: 'DD.MM.YYYY' } 1`] = `
<div>
  <a
    href="/ru/my-url"
    hreflang="ru"
  />
</div>
`;

exports[`LocalizedLink renders link to homepage correctly for path  1`] = `
<div>
  <a
    href="/"
    hreflang="en"
  />
</div>
`;

exports[`LocalizedLink renders link to homepage correctly for path / 1`] = `
<div>
  <a
    href="/"
    hreflang="en"
  />
</div>
`;

exports[`LocalizedLink renders link to homepage correctly for path /en/ 1`] = `
<div>
  <a
    href="/en/"
    hreflang="en"
  />
</div>
`;

exports[`LocalizedLink renders link to homepage correctly for path en 1`] = `
<div>
  <a
    href="en"
    hreflang="en"
  />
</div>
`;
